# TCAI-v6

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  install.bat  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/tcai/: __main__.py
src/tcai/agent/: __init__.py  knowledge.py  learn.py  loop.py  ui.py
src/tcai/gateway/: ast_rules.py  audit.py  dlp.py  http_client.py  injection_filter.py  logging_setup.py  scope_checker.py  session_context.py
src/tcai/gateway/web/: search_engine.py
src/tcai/prompts/: L3_protocol.txt  __init__.py
