[project]
name = "tcai"
version = "6.0.0"
description = "TCAI — AI Agent Security Execution Framework for Windows Diagnostics"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [
    { name = "TCAI Contributors", email = "" },
]
requires-python = ">=3.11"
keywords = ["ai-agent", "security", "windows", "diagnostics", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.11", "mypy>=1.13", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
tcai = "tcai.agent.main:main"
tcai-gateway = "tcai.gateway.server:mcp_main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["T20"]  # Allow print() in tests

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["src/tcai"]
exclude = ["tests/"]
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/tcai --cov-report=term-missing --cov-report=html"
markers = [
    "windows: tests that require Windows",
    "slow: tests that take longer than 2 seconds",
    "integration: integration tests",
]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
